[package]
name = "hetu"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "crates/accumulator",
    "crates/vlc",
    "znostr/zrelay",
    "znostr/zagent",
    "znostr/zclient",
    "tools/replication-control",
    "tools/replication-control-messages",
    "tools/kademlia-control-messages",
]

[profile.release]
# debug = true
strip = true
incremental = true

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-trait = "0.1.74"
axum = "0.7.1"
borsh = { version = "1.2.0", features = ["derive"] }
ethnum = "1.5.0"
kademlia-control-messages = { version = "0.1.0", path = "tools/kademlia-control-messages" }
rand = "0.8.5"
replication-control-messages = { version = "0.1.0", path = "tools/replication-control-messages" }
secp256k1 = { version = "0.28.0", features = [
    "hashes",
    "rand",
    "global-context",
] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"
