[package]
name = "accumulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neat = { version = "0.1.0", path = "../.." }
vlc = { version = "0.1.0", path = "../vlc" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
clap = { version = "4", features = ["derive"] }
