[package]
name = "kademlia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
neat = { version = "0.1.0", path = "../.." }
primitive-types = "0.12.2"
serde = { version = "1.0.189", features = ["derive"] }
