[package]
name = "permissioned-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bincode = "1.3.3"
control-messages = { version = "0.1.0", path = "../../scripts/control-messages" }
flume = "0.11.0"
k256 = { version = "0.13.1", features = ["serde"] }
neat = { version = "0.1.0", path = "../.." }
nix = { version = "0.27.1", features = ["sched"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
